--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -39,8 +39,8 @@ html {
   width: 1.5em;
   height: 1.5em;
   border-radius: 50%;
-  bottom: 2%;
-  right: 5.5%;
+  bottom: 8%;
+  right: 2%;
   z-index: 10;
   display: grid;
   grid-template-columns: 1fr;
@@ -306,7 +306,7 @@ html {
     }
   }
   .the_mail {
-    right: 18%;
+    // right: 20%;
 
     &:hover {
       transform: scale(1.1);
